1.0.0
1. 添加：图数据库的类型转Java Bean的属性类型
2. 优化：使用单例来减少构建很多类型转换实例